# dilithium-web

./: .gitignore  bun.lockb  next.config.ts  package-lock.json  package.json  wrangler.beta.toml  wrangler.toml
.open-next/assets/: BUILD_ID  robots.txt  sitemap.xml
.open-next/cloudflare/: cache-assets-manifest.sql  init.js  next-env.mjs
.open-next/dynamodb-provider/: dynamodb-cache.json
.open-next/middleware/: handler.mjs
dilithium-wallet/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dilithium-wallet/convex/: http.ts  node.ts  schema.ts
dilithium-wallet/public/: manifest.json
dilithium-wallet/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
dilithium-wallet/wasm/: go.mod  go.sum  main.go
dlt-webminer/: wrangler.toml
dlt-webminer/deploy/: nginx.conf
dlt-webminer/pool-proxy/: package.json  proxy.js
dlt-webminer/scripts/: build.sh
dlt-webminer/wasm-miner/: Cargo.toml
dlt-webminer/wasm-miner/.cargo/: config.toml
dlt-webminer/wasm-miner/src/: lib.rs  merkle.rs  mining.rs  sha256.rs  utils.rs
dlt-webminer/web/: _headers  dlt_webminer_bg.wasm  index.html
public/: _headers  _redirects  sitemap.xml
public/miner/: mining-animation.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AboutSection.tsx  ContactSection.tsx  DilithiumCrystal.tsx  ExplorerTutorial.tsx  FeaturesSection.tsx  Footer.tsx  GetStartedSection.tsx  HeroSection.tsx  Navigation.tsx  RoadmapSection.tsx  StarfieldBackground.tsx  WarpSpeedLines.tsx  useReveal.ts
src/hooks/: useExchangeAuth.ts  (+2 more)
(+157 files in other folders)
