[package]
name = "dlt-webminer"
version = "1.0.0"
edition = "2021"
description = "Dilithium cryptocurrency web miner - SHA-256 PoW via WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt with aggressive optimization. -O4 enables all optimizations
# including those that trade code size for speed.
# Must enable the same features that rustc targets (simd128, bulk-memory, sign-ext).
wasm-opt = ["-O4", "--enable-mutable-globals", "--enable-simd", "--enable-bulk-memory", "--enable-sign-ext", "--enable-nontrapping-float-to-int"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
